fix: make map container absolutely positioned with min-height to fix leaflet rendering collapse on GlobalMap

--- a/frontend/src/pages/GlobalMap.css
+++ b/frontend/src/pages/GlobalMap.css
@@ -3,7 +3,8 @@
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - var(--nav-height) - 1px);
+  height: calc(100vh - var(--nav-height, 70px));
+  min-height: 600px;
 }
 
 .map-container-full {
